# AttendenceManagementSystemC-

./: AddStudentWindow.cpp  AddStudentWindow.h  AdminWindow.cpp  AdminWindow.h  Attendance.h  CMakeLists.txt  ChangePasswordWindow.cpp  ChangePasswordWindow.h  LoginWindow.cpp  LoginWindow.h  PinCodeWindow.cpp  PinCodeWindow.h  Student.h  ViewAttendanceWindow.cpp  ViewAttendanceWindow.h  logic.cpp  main.cpp  mainwindow.cpp  mainwindow.h  readme.md  style.cpp  style.h
Headers/: AddStudentWindow.h  Password.h
Source/: AddStudentWindow.cpp  CMakeLists.txt  PinCodeWindow.cpp  ViewAttendanceWindow.cpp  main.cpp  mainwindow.cpp  style.cpp
